--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "description": "",
   "dependencies": {
     "axios": "^1.11.0",
+    "dotenv": "^17.2.1",
     "express": "^5.1.0",
     "uuid": "^11.1.0"
   }
